--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.1.2",
     "benchmark": "^2.1.4",
     "mocha": "^6.2.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "vite": "^5.0.0"
   },
   "scripts": {
     "test": "mocha -b",
-    "build": "webpack --config webpack.config.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "benchmark:shoaks": "node ./src/bm_shoaks.js",
-    "benchmark:layers": "node ./src/bm_layers.js",
-    "start:dev": "webpack --watch --mode development"
+    "benchmark:layers": "node ./src/bm_layers.js"
   }
 }
