--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.1.2",
     "benchmark": "^2.1.4",
-    "mocha": "^6.2.2",
+    "eslint": "^9.0.0",
+    "mocha": "^11.1.0",
     "vite": "^5.0.0"
   },
   "scripts": {
-    "test": "mocha -b",
+    "test": "mocha --extension js \"test/**/*.js\"",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "lint": "eslint \"src/**/*.{js,jsx}\" \"test/**/*.js\"",
     "benchmark:shoaks": "node ./src/bm_shoaks.js",
     "benchmark:layers": "node ./src/bm_layers.js"
   }
