--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
-/node_modules
-/dist
+# Dependencies
+node_modules/
+
+# Build outputs
+/dist/
+/build/
+
+# Test coverage
+coverage/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment files
+.env
+.env.*
+
+# Editor directories and files
+.idea/
+.vscode/
+.DS_Store
+Thumbs.db
+
+# Misc
+*.local
